name:                cardano-installer
version:             0.1.0.0
synopsis:            Cardano Installer
description:         Please see README.md
license:             MIT
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable windows-installer
  main-is:             WindowsInstaller.hs
  build-depends:       base
                     , text
                     , nsis
                     , turtle
                     , directory

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions: OverloadedStrings
